fix: adapt dark mode and video title colors

--- a/src/styles/adaptedStyles/common/comments.scss
+++ b/src/styles/adaptedStyles/common/comments.scss
@@ -57,6 +57,12 @@
 
   // #region dark mode adaption part
   &.dark {
+    // Bridge the personalized palette into Bilibili comment component shadow roots.
+    --bew-comment-replies-mask-bg: color-mix(in oklab, var(--bew-bg), transparent 15%);
+    --bew-comment-tag-color: var(--bew-text-2);
+    --bew-comment-tag-bg: var(--bew-fill-1);
+    --bew-comment-editor-border: var(--bew-border-color);
+
     // 評論人用戶名
     .reply-item .root-reply-container .content-warp .user-info .user-name,
     .sub-reply-item .sub-user-info .sub-user-name {
